<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.ideotic.edioticideas.aaya.Needs"
        android:contextClickable="false">

        <TextView
            android:id="@+id/textViewGreet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15sp"
            android:fontFamily="sans-serif"
            android:paddingBottom="20dp"
            android:text="@string/greet"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/darktext" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewGreet"
            android:orientation="vertical">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/name"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/darktext"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/Contact"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/darktext"
                android:textSize="15sp" />


            <EditText
                android:id="@+id/editTextContact"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone" />



            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/emer1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/darktext"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextEmer1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/emer2"
                android:textColor="@color/darktext"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editTextEmer2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linearLayout"
            android:orientation="vertical">


            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginBottom="5dp"
                android:background="@drawable/custom_button"
                android:fontFamily="sans-serif"
                android:text="@string/button"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editText_from_needs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/custom"
                android:hint="Tap mic to speak"
                android:padding="20dp"
                android:textColor="@color/cardview_dark_background"
                android:textSize="20dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/linearLayout"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_from_needs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/editText"
                android:layout_marginTop="190dp"
                android:padding="40dp"
                android:src="@drawable/ic_baseline_mic_24" />

        </LinearLayout>

    </RelativeLayout>
</ScrollView>